// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/StatusLabel Error 1`] = `
<div>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-statusLabel css-1ezega9-MuiTypography-root"
    style="background-color: rgb(255, 235, 238); color: rgb(198, 40, 40);"
  >
    error
  </span>
</div>
`;

exports[`Storyshots Label/StatusLabel Success 1`] = `
<div>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-statusLabel css-1ezega9-MuiTypography-root"
    style="background-color: rgb(248, 255, 240); color: rgb(46, 125, 50);"
  >
    success
  </span>
</div>
`;

exports[`Storyshots Label/StatusLabel Warning 1`] = `
<div>
  <span
    class="MuiTypography-root MuiTypography-body1 makeStyles-statusLabel css-1ezega9-MuiTypography-root"
    style="background-color: rgb(255, 243, 224); color: rgb(196, 69, 0);"
  >
    warning
  </span>
</div>
`;
